add base jdk1.6 not in one class